--- a/note/flutter.html
+++ b/note/flutter.html
@@ -65,23 +65,23 @@
 <section class="content">
 <header>
 <h1>Flutter</h1>
-<div class="title-date">2020년 5월 8일 수정</div>
+<div class="title-date">2020년 5월 9일 수정</div>
 </header>
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org1d05d88">문제 해결</a>
+<li><a href="#orgab19978">문제 해결</a>
 <ul>
-<li><a href="#org64c0d1f">macOS에서 개발자 인증 문제</a></li>
-<li><a href="#orga24f4ee">프레임워크 iOS 아키텍처 오류</a></li>
+<li><a href="#org8e4851d">macOS에서 개발자 인증 문제</a></li>
+<li><a href="#org8a7f452">프레임워크 iOS 아키텍처 오류</a></li>
 </ul>
 </li>
-<li><a href="#org5bd7b21">외부 링크</a></li>
+<li><a href="#org9f1945b">외부 링크</a></li>
 </ul>
 </div>
 </div>
 <p>
-Flutter(플러터)는 <a href="dart.html">Dart</a>라는 한 가지 언어로 iOS, Android 등
+Flutter(플러터)는 <a href="dart.html">Dart</a>라는 한 가지 언어로 <a href="ios.html">iOS</a>, Android 등
 다양한 플랫폼 용 앱을 만들기 위한 UI 툴킷 겸 프레임워크다.
 </p>
 
@@ -90,13 +90,13 @@ Flutter(플러터)는 <a href="dart.html">Dart</a>라는 한 가지 언어로 iO
 더 이상의 자세한 소개는 생략한다.
 </p>
 
-<div id="outline-container-org1d05d88" class="outline-2">
-<h2 id="org1d05d88">문제 해결</h2>
-<div class="outline-text-2" id="text-org1d05d88">
+<div id="outline-container-orgab19978" class="outline-2">
+<h2 id="orgab19978">문제 해결</h2>
+<div class="outline-text-2" id="text-orgab19978">
 </div>
-<div id="outline-container-org64c0d1f" class="outline-3">
-<h3 id="org64c0d1f">macOS에서 개발자 인증 문제</h3>
-<div class="outline-text-3" id="text-org64c0d1f">
+<div id="outline-container-org8e4851d" class="outline-3">
+<h3 id="org8e4851d">macOS에서 개발자 인증 문제</h3>
+<div class="outline-text-3" id="text-org8e4851d">
 <p>
 Catalina 등 최신 <a href="macos.html">macOS</a>에서 flutter <a href="cli.html">CLI</a>
 도구를 사용하는 중 이런 오류가 나면서 커맨드가 동작하지 않는 경우가 있다.
@@ -129,11 +129,11 @@ Flutter "<code>idevice_id</code>" cannot be opened because the developer cannot 
 </p>
 </div>
 </div>
-<div id="outline-container-orga24f4ee" class="outline-3">
-<h3 id="orga24f4ee">프레임워크 iOS 아키텍처 오류</h3>
-<div class="outline-text-3" id="text-orga24f4ee">
+<div id="outline-container-org8a7f452" class="outline-3">
+<h3 id="org8a7f452">프레임워크 iOS 아키텍처 오류</h3>
+<div class="outline-text-3" id="text-org8a7f452">
 <p>
-<code>run</code> 커맨드로 실행 시 여러 iOS 플랫폼 용으로 빌드를 하다 보면
+<code>run</code> 커맨드로 실행 시 여러 <a href="ios.html">iOS</a> 플랫폼 용으로 빌드를 하다 보면
 이상하게 아래와 같은 오류가 나면서 빌드가 실패하는 케이스를 수 차례 겪었다.
 </p>
 <blockquote>
@@ -166,9 +166,9 @@ was built for iOS. (in target 'Runner' from project 'Runner')
 </div>
 </div>
 </div>
-<div id="outline-container-org5bd7b21" class="outline-2">
-<h2 id="org5bd7b21">외부 링크</h2>
-<div class="outline-text-2" id="text-org5bd7b21">
+<div id="outline-container-org9f1945b" class="outline-2">
+<h2 id="org9f1945b">외부 링크</h2>
+<div class="outline-text-2" id="text-org9f1945b">
 <ul class="org-ul">
 <li><a target="_blank" href="https://medium.com/flutter/announcing-flutter-1-17-4182d8af7f8e">🌏Announcing Flutter 1.17</a></li>
 </ul>
