--- a/note/homebrew.html
+++ b/note/homebrew.html
@@ -70,22 +70,22 @@
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#orgdf5ad8c">기본 사용법</a>
+<li><a href="#org6599881">기본 사용법</a>
 <ul>
-<li><a href="#org0544e3e">패키지 검색</a></li>
-<li><a href="#orgc77f0aa">패키지 정보</a></li>
-<li><a href="#org8f5a506">패키지 설치</a></li>
-<li><a href="#orge5b9264">만료된 버전 확인</a></li>
-<li><a href="#org6340803">패키지 업그레이드</a></li>
-<li><a href="#org59e046a">구 버전 삭제하기</a></li>
-<li><a href="#orgb3d732f">패키지 삭제(uninstall)</a></li>
-<li><a href="#org6f213f1">의사 양반(?)</a></li>
+<li><a href="#org1b7acdb">패키지 검색</a></li>
+<li><a href="#orgdef8ae0">패키지 정보</a></li>
+<li><a href="#org05a8233">패키지 설치</a></li>
+<li><a href="#org48fd3d9">만료된 버전 확인</a></li>
+<li><a href="#org3950a1c">패키지 업그레이드</a></li>
+<li><a href="#orgef5b9a6">구 버전 삭제하기</a></li>
+<li><a href="#org4fc07d4">패키지 삭제(uninstall)</a></li>
+<li><a href="#org715d0f7">의사 양반(?)</a></li>
 </ul>
 </li>
-<li><a href="#org99cc1c9">구 버전 패키지 사용하기</a></li>
-<li><a href="#orgc6d4f4d">다중 버전을 제공하는 패키지의 경우</a></li>
-<li><a href="#orgcd8e418">Cask</a></li>
-<li><a href="#orgcd163ee">외부 링크</a></li>
+<li><a href="#org0f795fa">구 버전 패키지 사용하기</a></li>
+<li><a href="#org0440397">다중 버전을 제공하는 패키지의 경우</a></li>
+<li><a href="#orgd146dca">Cask</a></li>
+<li><a href="#org2129915">외부 링크</a></li>
 </ul>
 </div>
 </div>
@@ -96,31 +96,31 @@ Homebrew는 <a href="macos.html">macOS</a> 전용 패키지 관리자다.
 또한 root 사용자가 아니어도 사용할 수도 있도록 구조를 만들어 준다는 점도 특징이다.
 </p>
 
-<div id="outline-container-orgdf5ad8c" class="outline-2">
-<h2 id="orgdf5ad8c">기본 사용법</h2>
-<div class="outline-text-2" id="text-orgdf5ad8c">
+<div id="outline-container-org6599881" class="outline-2">
+<h2 id="org6599881">기본 사용법</h2>
+<div class="outline-text-2" id="text-org6599881">
 </div>
-<div id="outline-container-org0544e3e" class="outline-3">
-<h3 id="org0544e3e">패키지 검색</h3>
-<div class="outline-text-3" id="text-org0544e3e">
+<div id="outline-container-org1b7acdb" class="outline-3">
+<h3 id="org1b7acdb">패키지 검색</h3>
+<div class="outline-text-3" id="text-org1b7acdb">
 <div class="org-src-container">
 <pre class="src src-bash">brew search KEYWORD
 </pre>
 </div>
 </div>
 </div>
-<div id="outline-container-orgc77f0aa" class="outline-3">
-<h3 id="orgc77f0aa">패키지 정보</h3>
-<div class="outline-text-3" id="text-orgc77f0aa">
+<div id="outline-container-orgdef8ae0" class="outline-3">
+<h3 id="orgdef8ae0">패키지 정보</h3>
+<div class="outline-text-3" id="text-orgdef8ae0">
 <div class="org-src-container">
 <pre class="src src-bash">brew info PACKAGE_NAME
 </pre>
 </div>
 </div>
 </div>
-<div id="outline-container-org8f5a506" class="outline-3">
-<h3 id="org8f5a506">패키지 설치</h3>
-<div class="outline-text-3" id="text-org8f5a506">
+<div id="outline-container-org05a8233" class="outline-3">
+<h3 id="org05a8233">패키지 설치</h3>
+<div class="outline-text-3" id="text-org05a8233">
 <div class="org-src-container">
 <pre class="src src-bash">brew install PACKAGE_NAME
 </pre>
@@ -131,9 +131,9 @@ Homebrew는 <a href="macos.html">macOS</a> 전용 패키지 관리자다.
 </p>
 </div>
 </div>
-<div id="outline-container-orge5b9264" class="outline-3">
-<h3 id="orge5b9264">만료된 버전 확인</h3>
-<div class="outline-text-3" id="text-orge5b9264">
+<div id="outline-container-org48fd3d9" class="outline-3">
+<h3 id="org48fd3d9">만료된 버전 확인</h3>
+<div class="outline-text-3" id="text-org48fd3d9">
 <p>
 설치된 패키지의 최신 버전이 존재하는지 확인하려면 <code>update</code> 후
 <code>outdated</code> 를 살펴보자.
@@ -145,9 +145,9 @@ brew outdated
 </div>
 </div>
 </div>
-<div id="outline-container-org6340803" class="outline-3">
-<h3 id="org6340803">패키지 업그레이드</h3>
-<div class="outline-text-3" id="text-org6340803">
+<div id="outline-container-org3950a1c" class="outline-3">
+<h3 id="org3950a1c">패키지 업그레이드</h3>
+<div class="outline-text-3" id="text-org3950a1c">
 <div class="org-src-container">
 <pre class="src src-bash">brew upgrade PACKAGE_NAME
 </pre>
@@ -161,9 +161,9 @@ brew outdated
 </div>
 </div>
 </div>
-<div id="outline-container-org59e046a" class="outline-3">
-<h3 id="org59e046a">구 버전 삭제하기</h3>
-<div class="outline-text-3" id="text-org59e046a">
+<div id="outline-container-orgef5b9a6" class="outline-3">
+<h3 id="orgef5b9a6">구 버전 삭제하기</h3>
+<div class="outline-text-3" id="text-orgef5b9a6">
 <p>
 패키지를 업그레이드해도 구 버전은 그대로 남아 파일 시스템에 잔존한다.
 이를 청소하기 위해 <code>cleanup</code> 커맨드를 사용할 수 있다.
@@ -177,18 +177,18 @@ brew outdated
 </p>
 </div>
 </div>
-<div id="outline-container-orgb3d732f" class="outline-3">
-<h3 id="orgb3d732f">패키지 삭제(uninstall)</h3>
-<div class="outline-text-3" id="text-orgb3d732f">
+<div id="outline-container-org4fc07d4" class="outline-3">
+<h3 id="org4fc07d4">패키지 삭제(uninstall)</h3>
+<div class="outline-text-3" id="text-org4fc07d4">
 <div class="org-src-container">
 <pre class="src src-bash">brew uninstall PACKAGE_NAME
 </pre>
 </div>
 </div>
 </div>
-<div id="outline-container-org6f213f1" class="outline-3">
-<h3 id="org6f213f1">의사 양반(?)</h3>
-<div class="outline-text-3" id="text-org6f213f1">
+<div id="outline-container-org715d0f7" class="outline-3">
+<h3 id="org715d0f7">의사 양반(?)</h3>
+<div class="outline-text-3" id="text-org715d0f7">
 <div class="org-src-container">
 <pre class="src src-bash">brew doctor
 </pre>
@@ -199,9 +199,9 @@ brew outdated
 </div>
 </div>
 </div>
-<div id="outline-container-org99cc1c9" class="outline-2">
-<h2 id="org99cc1c9">구 버전 패키지 사용하기</h2>
-<div class="outline-text-2" id="text-org99cc1c9">
+<div id="outline-container-org0f795fa" class="outline-2">
+<h2 id="org0f795fa">구 버전 패키지 사용하기</h2>
+<div class="outline-text-2" id="text-org0f795fa">
 <p>
 만약 <code>upgrade</code> 등으로 최신버전이 설치되었다면
 해당 패키지의 구 버전도 여전히 파일 시스템에 남아있다.
@@ -216,9 +216,9 @@ brew outdated
 </p>
 </div>
 </div>
-<div id="outline-container-orgc6d4f4d" class="outline-2">
-<h2 id="orgc6d4f4d">다중 버전을 제공하는 패키지의 경우</h2>
-<div class="outline-text-2" id="text-orgc6d4f4d">
+<div id="outline-container-org0440397" class="outline-2">
+<h2 id="org0440397">다중 버전을 제공하는 패키지의 경우</h2>
+<div class="outline-text-2" id="text-org0440397">
 <p>
 다중 버전의 패키지가 필요한 경우 우선 지원되는지 부터 확인해봐야 한다.
 예를 들어 node.js 의 경우 LTS 버전이 다양하게 제공되고 있다.
@@ -321,9 +321,9 @@ v10.x.x
 </p>
 </div>
 </div>
-<div id="outline-container-orgcd8e418" class="outline-2">
-<h2 id="orgcd8e418">Cask</h2>
-<div class="outline-text-2" id="text-orgcd8e418">
+<div id="outline-container-orgd146dca" class="outline-2">
+<h2 id="orgd146dca">Cask</h2>
+<div class="outline-text-2" id="text-orgd146dca">
 <p>
 cask는 <a href="macos.html">macOS</a> 응용 소프트웨어나
 다양한 리소스를 설치할 수 있게 도와주는 확장 도구다.
@@ -357,9 +357,9 @@ outdated나 upgrade, uninstall 등등의 커맨드는 비슷하게 사용할 수
 </p>
 </div>
 </div>
-<div id="outline-container-orgcd163ee" class="outline-2">
-<h2 id="orgcd163ee">외부 링크</h2>
-<div class="outline-text-2" id="text-orgcd163ee">
+<div id="outline-container-org2129915" class="outline-2">
+<h2 id="org2129915">외부 링크</h2>
+<div class="outline-text-2" id="text-org2129915">
 <ul class="org-ul">
 <li><a target="_blank" href="https://brew.sh">🌏Homebrew 공식 홈페이지</a></li>
 </ul>
@@ -380,6 +380,13 @@ outdated나 upgrade, uninstall 등등의 커맨드는 비슷하게 사용할 수
 <hr /><h1>이 글을 링크하는 글들</h1>
 <div class="article-link">
 <div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/carthage.html">Carthage</a></h2>
+<div class="article-link-date">
+2020년 5월 9일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/pngquant.html">pngquant</a></h2>
 <div class="article-link-date">
 2020년 5월 1일 수정</div>
@@ -395,13 +402,6 @@ outdated나 upgrade, uninstall 등등의 커맨드는 비슷하게 사용할 수
 <div class="article-link">
 <div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/pyenv.html">pyenv</a></h2>
-<div class="article-link-date">
-2020년 4월 22일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/carthage.html">Carthage</a></h2>
 <div class="article-link-date">
 2020년 4월 22일 수정</div>
 </div>
