--- a/note/apple.html
+++ b/note/apple.html
@@ -70,11 +70,11 @@
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org10b6fe6">맥</a></li>
-<li><a href="#orgafd33cb">아이폰</a></li>
-<li><a href="#org8e6c5a6">아이패드 및 기타</a></li>
-<li><a href="#org12c7ac2">소프트웨어</a></li>
-<li><a href="#org65a26f9">세계 최고의 시가총액을 가진 회사</a></li>
+<li><a href="#org4e32526">맥</a></li>
+<li><a href="#org8c074c2">아이폰</a></li>
+<li><a href="#orgff1d903">아이패드 및 기타</a></li>
+<li><a href="#org2ad842e">소프트웨어</a></li>
+<li><a href="#org755ad9f">세계 최고의 시가총액을 가진 회사</a></li>
 </ul>
 </div>
 </div>
@@ -88,9 +88,9 @@
 아래는 개인적인 관점으로 애플을 설명하기에 좋을 듯한 주제로 분류한 내용이다.
 </p>
 
-<div id="outline-container-org10b6fe6" class="outline-2">
-<h2 id="org10b6fe6">맥</h2>
-<div class="outline-text-2" id="text-org10b6fe6">
+<div id="outline-container-org4e32526" class="outline-2">
+<h2 id="org4e32526">맥</h2>
+<div class="outline-text-2" id="text-org4e32526">
 <p>
 맥(Mac) 혹은 매킨토시(Machintosh)는 애플에서 개발한 개인용 데스크톱 PC의 이름이다.
 현재는 맥북(Macbook), 맥북프로(Macbook Pro), 아이맥(iMac), 맥프로(Mac Pro) 등 다양한 타입의 PC 제품을 출시하고 있다.
@@ -98,9 +98,9 @@
 </p>
 </div>
 </div>
-<div id="outline-container-orgafd33cb" class="outline-2">
-<h2 id="orgafd33cb">아이폰</h2>
-<div class="outline-text-2" id="text-orgafd33cb">
+<div id="outline-container-org8c074c2" class="outline-2">
+<h2 id="org8c074c2">아이폰</h2>
+<div class="outline-text-2" id="text-org8c074c2">
 <p>
 아이폰(iPhone)은 전 세계에 스마트폰을 대중화 시킨 가장 큰 주역이고
 애플이 현재처럼 성장할 수 있게 한 가장 큰 주역이기도 하다.
@@ -108,9 +108,9 @@
 </p>
 </div>
 </div>
-<div id="outline-container-org8e6c5a6" class="outline-2">
-<h2 id="org8e6c5a6">아이패드 및 기타</h2>
-<div class="outline-text-2" id="text-org8e6c5a6">
+<div id="outline-container-orgff1d903" class="outline-2">
+<h2 id="orgff1d903">아이패드 및 기타</h2>
+<div class="outline-text-2" id="text-orgff1d903">
 <p>
 맥과 아이폰 이후로 가장 유명한 제품이 있다면 태블릿 디바이스인 아이패드(iPad)가 있다.
 초기에는 화면만 큰 아이폰 취급을 받기도 했지만
@@ -128,9 +128,9 @@
 </p>
 </div>
 </div>
-<div id="outline-container-org12c7ac2" class="outline-2">
-<h2 id="org12c7ac2">소프트웨어</h2>
-<div class="outline-text-2" id="text-org12c7ac2">
+<div id="outline-container-org2ad842e" class="outline-2">
+<h2 id="org2ad842e">소프트웨어</h2>
+<div class="outline-text-2" id="text-org2ad842e">
 <p>
 <a href="macos.html">macOS</a>를 더불어 <a href="ios.html">iOS</a>와 같은 유명한 OS(Operating System) 소프트웨어를 개발하기도 했지만,
 iTunes 혹은 앱스토어(Appstore) 같은 소프트웨어 생태계에도 큰 영향을 끼친 소프트웨어를 개발하기도 했다.
@@ -138,9 +138,9 @@ iTunes 혹은 앱스토어(Appstore) 같은 소프트웨어 생태계에도 큰 
 </p>
 </div>
 </div>
-<div id="outline-container-org65a26f9" class="outline-2">
-<h2 id="org65a26f9">세계 최고의 시가총액을 가진 회사</h2>
-<div class="outline-text-2" id="text-org65a26f9">
+<div id="outline-container-org755ad9f" class="outline-2">
+<h2 id="org755ad9f">세계 최고의 시가총액을 가진 회사</h2>
+<div class="outline-text-2" id="text-org755ad9f">
 <p>
 관점에 따라서는 애플을 설명하는 가장 좋은 말 일지도 모른다.
 물론 항상 그런 것은 아니지만, 2011년 시가총액 톱을 차지한 이후 계속 높은 자리를 차지하고 있다.
@@ -160,6 +160,13 @@ iTunes 혹은 앱스토어(Appstore) 같은 소프트웨어 생태계에도 큰 
 </div>
 <div class="backlinks-container">
 <hr /><h1>이 글을 링크하는 글들</h1>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/ios.html">iOS</a></h2>
+<div class="article-link-date">
+2020년 5월 9일 수정</div>
+</div>
+</div>
 <div class="article-link">
 <div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/macos.html">macOS</a></h2>
@@ -186,13 +193,6 @@ iTunes 혹은 앱스토어(Appstore) 같은 소프트웨어 생태계에도 큰 
 <h2><a class="article-link-title" href="/note/flutter.html">Flutter</a></h2>
 <div class="article-link-date">
 2020년 5월 9일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/ios.html">iOS</a></h2>
-<div class="article-link-date">
-2020년 5월 8일 수정</div>
 </div>
 </div>
 <div class="article-link">
