--- a/index.html
+++ b/index.html
@@ -140,6 +140,20 @@
 <h1>❏ NOTE에서 최근 업데이트된 글</h1>
 <div class="article-link">
 <div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/docker-compose.html">Docker Compose</a></h2>
+<div class="article-link-date">
+2020년 5월 9일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/docker.html">Docker</a></h2>
+<div class="article-link-date">
+2020년 5월 9일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/tmux.html">Tmux</a></h2>
 <div class="article-link-date">
 2020년 5월 9일 수정</div>
@@ -192,20 +206,6 @@
 <h2><a class="article-link-title" href="/note/flutter.html">Flutter</a></h2>
 <div class="article-link-date">
 2020년 5월 9일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/carthage.html">Carthage</a></h2>
-<div class="article-link-date">
-2020년 5월 9일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/mongodb.html">MongoDB</a></h2>
-<div class="article-link-date">
-2020년 5월 8일 수정</div>
 </div>
 </div>
 </div>
