--- a/index.html
+++ b/index.html
@@ -140,6 +140,20 @@
 <h1>❏ NOTE에서 최근 업데이트된 글</h1>
 <div class="article-link">
 <div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/coffee.html">커피</a></h2>
+<div class="article-link-date">
+2020년 5월 9일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/doom-emacs.html">Doom Emacs</a></h2>
+<div class="article-link-date">
+2020년 5월 9일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/docker-compose.html">Docker Compose</a></h2>
 <div class="article-link-date">
 2020년 5월 9일 수정</div>
@@ -190,20 +204,6 @@
 <div class="article-link">
 <div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/userdefaults.html">UserDefaults</a></h2>
-<div class="article-link-date">
-2020년 5월 9일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/ios-macos-dev-links.html">iOS, macOS 개발 관련 링크</a></h2>
-<div class="article-link-date">
-2020년 5월 9일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/flutter.html">Flutter</a></h2>
 <div class="article-link-date">
 2020년 5월 9일 수정</div>
 </div>
