--- a/index.html
+++ b/index.html
@@ -140,6 +140,13 @@
 <h1>❏ NOTE에서 최근 업데이트된 글</h1>
 <div class="article-link">
 <div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/emacs.html">Emacs</a></h2>
+<div class="article-link-date">
+2020년 5월 10일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/coffee.html">커피</a></h2>
 <div class="article-link-date">
 2020년 5월 9일 수정</div>
@@ -197,13 +204,6 @@
 <div class="article-link">
 <div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/macos.html">macOS</a></h2>
-<div class="article-link-date">
-2020년 5월 9일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/userdefaults.html">UserDefaults</a></h2>
 <div class="article-link-date">
 2020년 5월 9일 수정</div>
 </div>
