--- a/index.html
+++ b/index.html
@@ -67,6 +67,13 @@
 <h1>❏ POST의 최신 글</h1>
 <div class="article-link">
 <div class="article-link-title-block">
+<h2><a class="article-link-title" href="/post/org-customize-id.html">Org 문서를 HTML로 출력했을 때 Headline의 ID가 계속 바뀌는 문제</a></h2>
+<div class="article-link-date">
+2020년 5월 11일 작성</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
 <h2><a class="article-link-title" href="/post/doom-emacs-vs-spacemacs.html">Doom Emacs vs Spacemacs</a></h2>
 <div class="article-link-date">
 2020년 5월 7일 작성</div>
@@ -126,13 +133,6 @@
 <h2><a class="article-link-title" href="/post/humanlike-google.html">구글 서비스의 인간스러움(?)</a></h2>
 <div class="article-link-date">
 2020년 4월 17일 작성</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/post/weird-github-page.html">왜 GitHub Pages의 일부 글이 나타나지 않았을까?</a></h2>
-<div class="article-link-date">
-2020년 4월 14일 작성</div>
 </div>
 </div>
 </div>
