update with 3 changes

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 <h1>❏ POST의 최신 글</h1>
 <div class="article-link">
 <div class="article-link-title-block">
-<h2><a class="article-link-title" href="/post/org-customize-id.html">Org 문서를 HTML로 출력했을 때 Headline의 ID가 계속 바뀌는 문제</a></h2>
+<h2><a class="article-link-title" href="/post/org-customize-id.html">Org 문서를 HTML로 출력할 때마다 바뀌는 Headline ID</a></h2>
 <div class="article-link-date">
 2020년 5월 11일 작성</div>
 </div>
