--- a/note/spacemacs.html
+++ b/note/spacemacs.html
@@ -70,7 +70,7 @@
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#orgf2c36f2">외부 링크</a></li>
+<li><a href="#0bbb90e1">외부 링크</a></li>
 </ul>
 </div>
 </div>
@@ -92,9 +92,9 @@
 여전히 좋은 설정 패키지라고 생각한다.
 </p>
 
-<div id="outline-container-orgf2c36f2" class="outline-2">
-<h2 id="orgf2c36f2">외부 링크</h2>
-<div class="outline-text-2" id="text-orgf2c36f2">
+<div id="outline-container-0bbb90e1" class="outline-2">
+<h2 id="0bbb90e1">외부 링크</h2>
+<div class="outline-text-2" id="text-0bbb90e1">
 <ul class="org-ul">
 <li><a target="_blank" href="https://www.spacemacs.org/">🌏스페이맥스 공식 홈페이지</a></li>
 <li><a target="_blank" href="https://www.youtube.com/playlist?list=PLPNohcoOBa5GejCpa5-Mw79bXnyynM1Nn">🌏The (Subjective) Spacemacs Howto</a>:
@@ -118,16 +118,16 @@
 <hr /><h1>이 글을 링크하는 글들</h1>
 <div class="article-link">
 <div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/doom-emacs.html">Doom Emacs</a></h2>
+<h2><a class="article-link-title" href="/note/org-mode.html">Org Mode</a></h2>
 <div class="article-link-date">
-2020년 5월 9일 수정</div>
+2020년 5월 11일 수정</div>
 </div>
 </div>
 <div class="article-link">
 <div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/org-mode.html">Org Mode</a></h2>
+<h2><a class="article-link-title" href="/note/doom-emacs.html">Doom Emacs</a></h2>
 <div class="article-link-date">
-2020년 5월 3일 수정</div>
+2020년 5월 9일 수정</div>
 </div>
 </div>
 <div class="article-link">
